k8s/bin/cafe/coffee.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cafe
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: coffee
  namespace: cafe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: cafe
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tea
  namespace: cafe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea 
  template:
    metadata:
      labels:
        app: tea 
    spec:
      containers:
      - name: tea 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: cafe
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe
spec:
  tls:
  - hosts:
    - coffee.cafe.gce.k8m.k8cluster.io
    - tea.cafe.gce.k8m.k8cluster.io
    - coffee.cafe.gce.k8n1.k8cluster.io
    - tea.cafe.gce.k8n1.k8cluster.io
    secretName: cafe-secret
  rules:
  - host: tea.cafe.gce.k8m.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: tea-svc
          servicePort: 80
  - host: coffee.cafe.gce.k8m.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-svc
          servicePort: 80
  - host: tea.cafe.gce.k8n1.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: tea-svc
          servicePort: 80
  - host: coffee.cafe.gce.k8n1.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-svc
          servicePort: 80
